--- a/Industry/industry.css
+++ b/Industry/industry.css
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 100px;
 }
 
 .jobtitle-text{
@@ -45,4 +46,8 @@
 #imanage-logo{
     width: 481px;
     height: 127px;
+}
+.tech-logo{
+    width: 50px;
+    height: auto;
 }
