--- a/Industry/industry.css
+++ b/Industry/industry.css
@@ -30,7 +30,7 @@
 }
 
 .jobtitle-text{
-    margin-top: 0px;;
+    margin-top: 0px;
 }
 .imanage-jobtitle-text{
     margin-top: 30px;
@@ -46,6 +46,10 @@
 #imanage-logo{
     width: 481px;
     height: 127px;
+}
+#uic-logo{
+    width: 250px;
+    height: auto;
 }
 .tech-logo{
     width: 50px;
